--- a/css/app.css
+++ b/css/app.css
@@ -22,6 +22,7 @@ img {
 .container {
     max-width:985px ;
     margin: 0 auto;
+    padding: 0 100px;
 }
 
 .row {
@@ -85,3 +86,14 @@ body {
 
 /* RESPONSIVE*/
 
+@media (max-width: 767.99px) {
+    .col-3 {
+        width: calc(100% / 2);
+    }
+}
+
+@media (max-width: 575.99px) {
+    .col-3 {
+        width: 100%;
+    }
+}
