--- a/css/app.css
+++ b/css/app.css
@@ -20,7 +20,7 @@ img {
 /*LAYOUT*/
 
 .container {
-    max-width:985px ;
+    max-width:1400px ;
     margin: 0 auto;
     padding: 0 100px;
 }
@@ -76,6 +76,30 @@ body {
     width: 28px;
     right: 50%;
     transform: translate(50%);
+}
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.7);
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 100px;
+}
+
+.overlay-img {
+    width: 800px;
+    margin-bottom: auto;
+}
+
+.close {
+    padding: 10px;
+    margin-bottom: auto;
 }
 
 /* DEBUG */
