--- a/css/app.css
+++ b/css/app.css
@@ -92,7 +92,6 @@ body {
     align-items: center;
     flex-direction: column;
     padding: 100px;
-    display: none;
 }
 
 .overlay-img {
@@ -107,6 +106,10 @@ body {
 
 p {
     margin-bottom: auto;
+}
+
+.d-none {
+    display: none;
 }
 
 /* DEBUG */
